--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,11 +1,15 @@
-ARG PHP_FPM_VERSION=8.1
-FROM --platform=${BUILDPLATFORM} php:${PHP_FPM_VERSION}
+ARG PHP_ALPINE_VERSION=8.1
+FROM --platform=${BUILDPLATFORM} php:${PHP_ALPINE_VERSION}
 
 # Install packages required to compile php extensions
 RUN apk add \
     autoconf \
-    zlib1g-dev \
-    g++
+    zlib-dev \
+    g++ \
+    grpc-dev \
+    cmake \
+    linux-headers \
+    make
 
 RUN yes | pecl install grpc \
     && docker-php-ext-enable grpc
